--- a/index.html
+++ b/index.html
@@ -12,90 +12,75 @@
     <div class="container-fluid">
         <nav>
             <div class="row row-menu">
-                <div class="col-sm-6">
-                    <img src="./assets/img/Vector Smart Object_w.svg" alt="logo" style="margin-top: 25px;margin-left: 25px;"/>
+                <div class="col-sm-6 col-sm-6-logo">
+                    <img src="./assets/img/Vector Smart Object_w.svg" alt="logo">
                 </div>
                 <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-4 col-sm-4-icon" style="padding: 5%">
-                            <a href="#">
-                                <h6 style="color: white">MEMBERS AREA</h6>
-                                <i class="fas fa-user-friends"
-                                    style="float: right;color: white; margin-left: 9%; margin-top: -1.5%; position: absolute;"></i>
+                    <div class="row ">
+                        <div class="col-sm-4 col-sm-4-members-area">                           
+                             <a href="#">
+                                <h6>MEMBERS AREA
+                                    <i class="fas fa-user-friends" ></i>
+                                </h6>
                             </a>
                         </div>
-                        <div class="col-sm-4" style="padding: 5%">
+                        <div class="col-sm-4 col-sm-4-search">
                             <a href="#">
-                                <h6 style="color: white">SEARCH</h6>
-                                <i class="fas fa-search" style="
-                      float: right;
-                      color: white;
-                      margin-left: 5%;
-                      margin-top: -1.5%;
-                      position: absolute;
-                    "></i>
+                                <h6>SEARCH
+                                     <i class="fas fa-search"></i>
+                                </h6>
                             </a>
                         </div>
-                        <div class="col-sm-4" style="padding: 5%">
+                        <div class="col-sm-4 col-sm-4-menu">
                             <a href="#">
-                                <h6 style="color: white">MENU</h6>
-                                <i class="fas fa-bars" style="
-                      float: left;
-                      color: white;
-                      margin-left: 4%;
-                      margin-top: -1.5%;
-                      position: absolute;
-                    "></i>
+                                <h6>MENU
+                                     <i class="fas fa-bars" ></i>
+                                </h6>
                             </a>
                         </div>
                     </div>
                 </div>
-
-                </form>
             </div>
-    </div>
-    </nav>
+         </nav>
     </div>
 </header>
 
 <body>
     <div class="container-fluid container-fluid-heder">
-        <div class="row">
-            <div class="col-sm-12">
+        <div class="row row-search">
+            <div class="col-sm-12 col-sm-12-search">
                 <h2><b>Search result</b></h2>
-                <p style="font-size: larger">
+                <p>
                     Ehcepteur sint occaecat cupidatat non<br />
                     proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd
                     gffd Ehcepteur sint occaecat cupidatat non<br />
                     proident, sunt in culpa qui officia deserunt gfdgfdgdfg gfdgfd
                     gffd
                 </p>
-                <form id="form" style="text-align: center; padding: 3%">
-                    <input type="search" id="query" name="q" placeholder="Keyword..."
-                        style="text-align: left; color: white; font-size: 25px" />
-                    <i class="fas fa-search" style="color: white; margin-right: -2%"></i>
+                <form id="form">
+                    <input type="search" id="query" name="q" placeholder="Keyword..." >
+                    <i class="fas fa-search"></i>
             </div>
         </div>
-
     </div>
     <div class="container">
         <section section-contenttype>
-            <div class="row" style="margin-top: 5%; text-align: center">
-                <div class="col-sm-12">
-                    <button type="button" class="btn btn-outline-success">
-                        <b style="color: gray">CONTENT TYPE</b>
+            <div class="row row-contenttype">
+                <div class="col-sm-12 col-sm-12-button">
+                    <button type="button" class="btn btn-outline-success" style="border-bottom-style: hidden;border-left-style:hidden;border-top-style: hidden">
+                        <b>CONTENT TYPE</b>
                     </button>
-                    <button type="button" class="btn btn-outline-success">
-                        <b style="color: gray">CONTENT TYPE</b>
+                    <button type="button" class="btn btn-outline-success"style="border-bottom-style: hidden;border-left-style:hidden;border-top-style: hidden">
+                        <b>CONTENT TYPE</b>
                     </button>
-                    <button type="button" class="btn btn-outline-success">
-                        <b style="color: gray">CONTENT TYPE</b>
+                    <button type="button" class="btn btn-outline-success"style="border-bottom-style: hidden;border-left-style:hidden;border-top-style: hidden">
+                        <b>CONTENT TYPE</b>
                     </button>
-                    <button type="button" class="btn btn-outline-success">
-                        <b style="color: gray">CONTENT TYPE</b>
+                    <button type="button" class="btn btn-outline-success"style="border-bottom-style: hidden;border-left-style:hidden;border-top-style: hidden;border-right-style:hidden">
+                        <b>CONTENT TYPE</b>
                     </button>
-                    <button type="button" class="btn btn-outline-success">
-                        <b style="color: gray">CONTENT TYPE</b>
+                    <button type="button" class="btn btn-outline-success"style="border-bottom-style: hidden;border-right-style:hidden;border-top-style: hidden">
+                        <b>CONTENT TYPE</b>
                     </button>
                 </div>
             </div>
@@ -207,15 +192,15 @@
         <section section-contenttype>
             <div class="row" style="margin-top: 5%; text-align: center">
                 <div class="col-sm-12">
-                    <button type="button" class="btn btn-outline-success" style="color: indigo;">
-                        <b style="color:grey">LOAD MORE <i class="fas fa-search"
-                                style="30px;text-align: center;"></i></b>
+                    <button type="button" class="btn btn-outline-success-load">
+                        LOAD MORE <i class="fas fa-search"
+                                style="text-align: center;"></i>
                     </button>
                 </div>
             </div>
         </section>
     </div>
-    <section class="efpia">
+    <div class="row row-efpia">
         <div class="row" style="margin-top:-4%;margin-left: 5%;margin-right: 5%;">
             <div class="col-sm-6">
                 <div class="row">
@@ -246,7 +231,7 @@
                 </div>
         </div>
 
-    </section>
+    </div>
 </body>
 <footer>
     <div class="row row-footer" style="padding: 40px;text-align: center;">
